# JCamera

./: build.gradle  readme.md
app/: build.gradle
app/src/androidTest/java/com/jz/jcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: AVFormatter.cpp  AVFormatter.h  AVFrameFilter.cpp  AVFrameFilter.h  AVMediaData.cpp  AVMediaData.h  AVMediaWriter.cpp  AVMediaWriter.h  Errors.h  Thread.h  YUVConvertor.cpp  YUVConvertor.h  YUVData.cpp  YUVData.h
app/src/main/cpp/include/: AndroidLog.h  Condition.h  Mutex.h
app/src/main/cpp/player/: CMakeLists.txt
app/src/main/cpp/player/android/: JMediaPlayer.cpp  JMediaPlayer.h  JNIHelp.cpp  NativeHelper.cpp
app/src/main/cpp/player/src/common/: Config.h  FFmpegUtil.cpp  FFmpegUtil.h  FrameQueue.cpp  FrameQueue.h  MessageQueue.cpp  MessageQueue.h  PacketQueue.cpp  PacketQueue.h  PlayerStatus.cpp  PlayerStatus.h
app/src/main/cpp/player/src/decoder/: AudioDecoder.cpp  AudioDecoder.h  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/src/device/: AudioDevice.cpp  AudioDevice.h  VideoDevice.cpp  VideoDevice.h
app/src/main/cpp/player/src/player/: AudioResampler.cpp  AudioResampler.h  Player.cpp  Player.h
app/src/main/cpp/player/src/render/: CoordinateUtils.cpp  CoordinateUtils.h  EGLHelper.cpp  EGLHelper.h  FrameBuffer.cpp  FrameBuffer.h  GLFilter.cpp  GLFilter.h  GLInputFilter.cpp  GLInputFilter.h  GLInputRGBAFilter.cpp  GLInputRGBAFilter.h  GLInputYUV420FIlter.cpp  GLInputYUV420Filter.h  InputRenderNode.cpp  InputRenderNode.h  MediaEGLContext.cpp  MediaEGLContext.h  OpenGLHelper.cpp  OpenGLHelper.h  RenderNode.cpp  RenderNode.h  RenderNodeType.h
app/src/main/cpp/player/src/sync/: MediaClock.cpp  MediaClock.h  MediaSync.cpp  MediaSync.h
app/src/main/cpp/recorder/: CMakeLists.txt
app/src/main/cpp/recorder/android/: RecorderNative.cpp
app/src/main/cpp/recorder/src/: RecordParams.cpp  RecordParams.h  Recorder.cpp  Recorder.h  SafetyQueue.h
app/src/main/java/com/jz/jcamera/: MainActivity.java
app/src/main/java/com/jz/jcamera/audio/: AudioRecorder.java
app/src/main/java/com/jz/jcamera/base/: BaseActivity.java
app/src/main/java/com/jz/jcamera/camera/: CalculateType.java  Camera2Manager.java  CameraHelper.java  CameraManager.java  CameraParam.java  FpsHelper.java  OnCameraCallback.java
app/src/main/java/com/jz/jcamera/controller/: CamerPresenter.java  OnRecordListener.java  PCallBack.java  RecorderCallBack.java  RecorderPresenter.java  VCallback.java
app/src/main/java/com/jz/jcamera/opengl/: EGLHelper.java
app/src/main/java/com/jz/jcamera/recorder/: FFRecordBulder.java  FFmpegRecorder.java
app/src/main/java/com/jz/jcamera/render/: BaseFilter.java  EGLSurfaceBase.java  GLGaussFilter.java  GLImageGaussPassFilter.java  GLImageGaussianBlurFilter.java  GLImageOESInputFilter.java  GLSplitScreenGuassFilter.java  RecorderRender.java  RenderHandler.java  RenderManager.java  RenderThread.java  WindowSurface.java
app/src/main/java/com/jz/jcamera/render/filter/: BaseFilter.java  GLGaussFilter.java  GLImageBorderFilter.java  GLImageGaussPassFilter.java  GLImageGaussianBlurFilter.java  GLImageOESInputFilter.java  GLMosaicFilter.java  GLMutilScreenFilter.java  GLSplitScreenGuassFilter.java  (+1 more)
app/src/main/java/com/jz/jcamera/ui/: FFmpegRecorderActivity.java  MainActivity.java  OpengGLTestActivity.java  PopuWindowManager.java
app/src/main/java/com/jz/jcamera/util/: AVFormatter.java  FileUtil.java  JLog.java  OpenGLUtil.java  ScaleType.java  ToastHelper.java
app/src/main/java/com/jz/myplayer/player/: NativeHelper.java
app/src/main/res/drawable/: ic_img_lib.xml  ic_stop.xml  ic_take.xml  ic_tx.xml
app/src/main/res/layout/: activity_ffm_recorder.xml  activity_main.xml  activity_opengl.xml  item_view.xml  window_pop.xml
app/src/main/res/raw/: fragment_beautify.glsl  fragment_border_filter.glsl  fragment_frame_blur.glsl  fragment_mirror.glsl  fragment_mosaic_rectangle.glsl  fragment_multiple_screen.glsl  fragment_shader.glsl  fragment_split_screen_guass.glsl  vertex_guass.glsl  vertex_shader.glsl  vertex_split_screen_guass.glsl
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/jz/jcamera/: ExampleUnitTest.java
doc/: .guass.cpp.swp  a.out  guass.cpp
